Changelog
=========


2.2 (unreleased)
----------------

- Nothing changed yet.


2.1 (2012-02-27)
----------------

- Added French translations.
  [ttschanz]

- Implements IE workaround for submitting the advanced search form on submit.
  Issue #1313 Erweiterte Suche: Formular kann im IE nicht mit <Enter> abgesendet werden.
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1313/
  [phgross]

- Add condition to the javascript regisitration.
  [phgross]


2.0 (2011-11-17)
----------------

- Made the filing number search more comfortable:
  use the new ZCTextIndex 'searchable_filing_no'.
  Issue #1260 Suche nach Ablagenummer
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1260
  [phgross]

- added test-buildout for plone 4.1
  [eschmutz]

2.0b10 (2011-08-24)
-------------------

- expanded tests
  [eschmutz]

- Jenkins-integration
  [eschmutz]

- Setup testcase for plone.app.testing
  [eschmutz]

- Issue #712 Advanced Search korrigieren und testen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/712
  removed field task_responsible and changed translations
  [eschmutz]


2.0b9
-----

- Issue #712 Advanced Search korrigieren und testen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/712
  fixed assigned_client setter, should only set when a task_responsible is selected
  [phgross]


2.0b8
-----

- Issue #712 Advanced Search korrigieren und testen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/712
  changed advancedsearch, so that it use now the interfaces for the type selection instead of the portal_type
  advancedsearch works now also for specialdossiers and forwards
  task_responsible search: find now only tasks wich are assinged to the current client
  [phgross]

2.0b7
-----

- Issue #712 Advanced Search korrigieren und testen
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/712