@@ -5,7 +5,10 @@ Changelog
 2.2 (unreleased)
 ----------------
 
-- Nothing changed yet.
+- Disalbe unloadProtection for the advanced search form.
+  Issue #1597 Meldung beim verlassen der Suche
+  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1597
+  [phgross]
 
 
 2.1 (2012-02-27)
